[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SCIV"
version = "1.0.0"
description = "Unveiling the pivotal cell types involved in variant function regulation at a single-cell resolution"
authors = [{name = "Zheng-Min Yu", email = "yuzmbio@163.com"}]
dynamic = ["version", "description"]
